--- a/05/wordpress_app.yaml
+++ b/05/wordpress_app.yaml
@@ -1,1 +1,54 @@
-
+apiVersion: v1
+kind: Service
+metadata:
+	name: web-svc
+spec:
+	type: NodePort
+	ports:
+		- port: 80
+			targetPort: 80
+			nodePort: 32500
+			protocol: TCP
+	selector:
+		app: wordpress
+---
+apiVersion: v1
+kind: Deployment
+metadata:
+	name: frontend
+	labels:
+		ver: v1
+spec:
+	replicas: 1           # For count 1 optional
+	selector:
+		matchExpressions:
+		- key: app
+			operator: In
+			values:
+			- wordpress
+	template:
+		metadata:
+			name: webapp
+			labels:
+				app: wordpress
+		spec:
+			volumes:
+			- name: vol1
+				persistentVolumeClaim:
+					claimName: wordclaim
+			containers:
+			- image: wordpress:4.8-apache
+				name: webapp
+				ports:
+				- containerPort: 80
+				env:
+				- name: WORDPRESS_DB_HOST             # database host name/IP
+					value: sql-svc
+				- name: WORDPRESS_DB_PASSWORD					# database password
+					valueFrom:
+						secretKeyRef:
+							name: sql-secret
+							key: password
+				volumeMounts:
+				- name: vol1
+					mountPath: /var/www/html		
